# AI-Engineering-Demo-Day

./: .gitignore  Bot_Integration_with_MCP_Tools.py  FASTMCP_README.md  LICENSE  MentalMindBot_AI_RAG_with_Agent.ipynb  MentalMindBot_AI_RAG_with_Agent_with_Memory.py  README.md  direct_rag.py  mcp.json  mixed_mcp_tools.py  pyproject.toml  requirements.txt  server.py
.chainlit/: config.toml
matrix-health-frontend/: README.md  package-lock.json  package.json  start.sh
matrix-health-frontend/app/: globals.css  layout.tsx  page.tsx
matrix-health-frontend/app/api/chat/: route.ts
matrix-health-frontend/app/components/: PasswordInput.tsx
